@@ -11,6 +11,7 @@
 #import <Metal/Metal.h>
 
 #include "include/core/SkRefCnt.h"
+#include "src/gpu/mtl/GrMtlUtil.h"
 
 class GrMtlGpu;
 class GrMtlPipelineState;
@@ -31,6 +32,11 @@ public:
     void addCompletedHandler(MTLCommandBufferHandler block) {
         [fCmdBuffer addCompletedHandler:block];
     }
+
+#ifdef GR_METAL_SDK_SUPPORTS_EVENTS
+    void encodeSignalEvent(id<MTLEvent> event, uint64_t value);
+    void encodeWaitForEvent(id<MTLEvent> event, uint64_t value);
+#endif
 
 private:
     GrMtlCommandBuffer(id<MTLCommandBuffer> cmdBuffer)
